# secure-signing

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
demo/hsm/: Cargo.toml
demo/hsm/src/: lib.rs  server.rs
demo/hsm/src/cli/server/ed25519/: hashi_corp_vault.rs
demo/hsm/src/cli/server/secp256k1/: aws_kms.rs
signing/interface/: Cargo.toml
signing/providers/aws-kms/: Cargo.toml
signing/providers/aws-kms/src/cryptography/secp256k1/: mod.rs
signing/providers/aws-kms/src/hsm/: key.rs  mod.rs
signing/providers/hashicorp-vault/: Cargo.toml
signing/providers/hashicorp-vault/src/cryptography/ed25519/: mod.rs
signing/providers/hashicorp-vault/src/hsm/: key.rs  mod.rs
signing/providers/local/: Cargo.toml
signing/providers/local/src/cryptography/ed25519/: mod.rs
signing/providers/local/src/cryptography/secp256k1/: mod.rs
signing/providers/local/src/signer/: ed25519.rs  mod.rs  secp256k1.rs
signing/signing-admin/: Cargo.toml
signing/signing-admin/src/: key_manager.rs
signing/signing-admin/src/cli/: rotate_key.rs
signing/testing/: Cargo.toml
signing/testing/src/: ed25519.rs
signing/testing/tests/: execute.rs  signer.rs
signing/util/loader/: Cargo.toml
signing/util/loader/src/: lib.rs
signing/util/loader/src/identifiers/: aws_kms.rs  hashi_corp_vault.rs  local.rs  mod.rs
