[package]
name = "secure-signer-loader"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
secure-signer = { workspace = true }
secure-signer-aws-kms = { workspace = true }
secure-signer-hashicorp-vault = { workspace = true }
secure-signer-local = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
